--- a/app/src/main/res/layout/live_fragment.xml
+++ b/app/src/main/res/layout/live_fragment.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+
+    <android.support.design.widget.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/livetablayout"
+        app:tabSelectedTextColor="@color/colorPrimaryDark">
+
+    </android.support.design.widget.TabLayout>
+
+    <com.jiyun.pandatv.module.live.views.NoScrollViewPager
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/viewpager"/>
 </LinearLayout>
