--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    >
+<com.jcodecraeer.xrecyclerview.XRecyclerView
+    android:background="#C464F4"
+    android:id="@+id/home_recyclerview"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
 
 </LinearLayout>
