--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="mycolor">#FFD7D5D5</color>
+    <color name="white">#F9F9FF</color>
+    <color name="textcolor">#518CF4</color>
+    <color name="pandapagertextcolor">#F48CE0</color>
 </resources>
