--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,18 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="CustomDialog" parent="Theme.AppCompat.Dialog">
-        <item name="android:windowFrame">@null</item>
-        <!--边框-->
-        <item name="android:windowIsFloating">true</item>
-        <!--是否浮现在activity之上-->
-        <item name="android:windowIsTranslucent">false</item>
-        <!--半透明-->
-        <item name="android:windowNoTitle">true</item>
-        <!--无标题-->
+    <!--自定义dialog背景全透明无边框theme -->
+    <style name="LoadingDialog" parent="android:style/Theme.Dialog">
+        <!--背景颜色及和透明程度-->
         <item name="android:windowBackground">@android:color/transparent</item>
-        <!--背景透明-->
-        <item name="android:backgroundDimEnabled">true</item>
-        <!--模糊-->
+        <!--是否去除标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!--是否去除边框-->
+        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否模糊-->
+        <item name="android:backgroundDimEnabled">false</item>
     </style>
 </resources>
