--- a/app/src/main/res/layout/live_fragment.xml
+++ b/app/src/main/res/layout/live_fragment.xml
@@ -11,11 +11,12 @@
         android:layout_height="wrap_content"
         android:id="@+id/livetablayout"
         app:tabSelectedTextColor="@color/colorPrimaryDark">
-
     </android.support.design.widget.TabLayout>
 
-    <com.jiyun.pandatv.module.live.views.NoScrollViewPager
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/viewpager"/>
+
+
+    <!--<com.jiyun.pandatv.module.live.views.NoScrollViewPager-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:id="@+id/viewpager"/>-->
 </LinearLayout>
