首页更新了三个item

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="mycolor">#FFD7D5D5</color>
     <color name="white">#F9F9FF</color>
     <color name="textcolor">#518CF4</color>
+    <color name="tabcolor">#2B39F4</color>
     <color name="pandapagertextcolor">#F48CE0</color>
 </resources>
