--- a/app/src/main/res/layout/live_fragment.xml
+++ b/app/src/main/res/layout/live_fragment.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
+    <android.support.design.widget.TabLayout
+        app:tabMode="scrollable"
+        app:tabIndicatorColor="@color/mycolor"
+        android:id="@+id/livefragment_tablayout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"></android.support.design.widget.TabLayout>
+
+    <com.example.administrator.pandatvsecond.widget.manager.NonSwipeableViewPager
+        android:id="@+id/livefragment_noviewpager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></com.example.administrator.pandatvsecond.widget.manager.NonSwipeableViewPager>
 </LinearLayout>
