熊猫直播更新

--- a/app/src/main/res/layout/home_pandaliveshow.xml
+++ b/app/src/main/res/layout/home_pandaliveshow.xml
@@ -19,7 +19,7 @@
             android:id="@+id/pandaliveshow_recyclerview"
             android:layout_below="@id/pandaliveshow_commont"
             android:layout_width="match_parent"
-            android:layout_height="300dp"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
 
     </RelativeLayout>
 
