--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     >
 <com.jcodecraeer.xrecyclerview.XRecyclerView
-    android:background="#C464F4"
+    android:background="@color/mycolor"
     android:id="@+id/home_recyclerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"></com.jcodecraeer.xrecyclerview.XRecyclerView>
