--- a/app/src/main/res/layout/home_pandaliveshow_recycle_item.xml
+++ b/app/src/main/res/layout/home_pandaliveshow_recycle_item.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="110dp"
     android:orientation="vertical">
+
     <ImageView
+        android:background="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"
+        android:layout_margin="5dp"
         android:id="@+id/iv_pandaliveshow_recycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3" />
+        android:layout_height="70dp"
+     />
+
     <TextView
         android:id="@+id/tv_pandaliveshow_recycler"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_height="40dp"
         android:gravity="center" />
 </LinearLayout>
