--- a/app/src/main/res/layout/live_common_item.xml
+++ b/app/src/main/res/layout/live_common_item.xml
@@ -1,27 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
-    android:layout_height="130dp">
+    android:layout_height="100dp">
    <RelativeLayout
+       android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
        <ImageView
+           android:background="@mipmap/ic_launcher"
+          android:scaleType="centerCrop"
            android:id="@+id/iv_livecommon"
-           android:layout_width="170dp"
-           android:layout_height="match_parent" />
+           android:layout_width="160dp"
+           android:layout_height="100dp" />
         <TextView
+            android:layout_marginTop="10dp"
+            android:textStyle="bold"
+            android:text="《精彩一刻》20170731小扫帚你好，小扫帚再见~"
             android:layout_toRightOf="@id/iv_livecommon"
             android:id="@+id/tv_livecommon_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
        <TextView
+           android:text="2017-07-31 10:32"
+           android:gravity="left"
+           android:padding="5dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/iv_livecommon"
            android:id="@+id/tv_livecommon_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
+           android:alpha="0.8"
            android:background="@drawable/lpanda_bottom_gra"
            android:orientation="horizontal"
            android:layout_alignBottom="@id/iv_livecommon"
