--- a/app/src/main/res/layout/live_especiallyshowfragment.xml
+++ b/app/src/main/res/layout/live_especiallyshowfragment.xml
@@ -2,76 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/mycolor"
     android:orientation="vertical">
-
-    <ImageView
-        android:id="@+id/iv_smalllivefragment"
+    <com.jcodecraeer.xrecyclerview.XRecyclerView
+        android:background="@color/white"
+        android:layout_margin="5dp"
+        android:id="@+id/especiallyshow_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:src="@mipmap/ic_launcher" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_smalllivefragment_title"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
-            android:padding="5dp"
-            android:text="[正在直播]成都基地高清精切线路" />
-
-        <TextView
-            android:id="@+id/tv_smalllivefragment_content"
-            android:layout_width="wrap_content"
-            android:layout_height="20dp"
-            android:layout_below="@id/tv_smalllivefragment_title"
-            android:paddingLeft="5dp"
-            android:text="简介" />
-
-        <Button
-            android:id="@+id/btn_smalllivefragment_hs"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
-            android:layout_below="@id/tv_smalllivefragment_title"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/live_china_detail_up" />
-
-        <View
-            android:id="@+id/view_smalllivefragment"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:layout_below="@id/btn_smalllivefragment_hs"
-            android:layout_marginTop="2dp"
-            android:background="#C8C8CD"></View>
-    </RelativeLayout>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:visibility="gone"
-                android:text="翻身、吃饭、睡觉、喝奶、打闹、攀爬……这里是成都大熊猫繁育研究基地，24小时高清直播大熊猫生活实况的地方。成年园、幼年园、幼儿园、母子园、一号别墅，11路直播信号28个摄像头，让你零距离了解国宝们的日常起居。"
-                android:layout_below="@id/view_smalllivefragment"
-                android:id="@+id/tv_smalllivefragment_brief"
-                android:padding="15dp"
-                android:layout_width="match_parent"
-                android:layout_height="120dp" />
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_smalllivefragment"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"></android.support.design.widget.TabLayout>
-            <com.example.administrator.pandatvsecond.widget.manager.NonSwipeableViewPager
-                android:id="@+id/nopager_smalllivefragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></com.example.administrator.pandatvsecond.widget.manager.NonSwipeableViewPager>
-
-        </LinearLayout>
-
-    </ScrollView>
+        android:layout_height="wrap_content"></com.jcodecraeer.xrecyclerview.XRecyclerView>
 
 </LinearLayout>
