--- a/app/src/main/res/layout/live_smalllivefragment.xml
+++ b/app/src/main/res/layout/live_smalllivefragment.xml
@@ -49,9 +49,11 @@
     </RelativeLayout>
 
     <ScrollView
+        android:background="@color/mycolor"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
+            android:background="@color/white"
             android:layout_margin="5dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
