--- a/jcvideoplayer-lib/src/main/res/layout/jc_layout_standard.xml
+++ b/jcvideoplayer-lib/src/main/res/layout/jc_layout_standard.xml
@@ -46,62 +46,6 @@
         android:background="@drawable/jc_click_back_tiny_selector"
         android:visibility="visible" />
 
-    <RelativeLayout
-        android:id="@+id/layout_top"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="@drawable/jc_title_bg"
-        android:gravity="center_vertical">
-
-
-        <ImageView
-            android:id="@+id/back"
-            android:layout_width="40dp"
-            android:layout_height="match_parent"
-            android:scaleType="centerInside"
-            android:layout_marginLeft="14dp"
-            android:src="@drawable/jc_click_back_selector" />
-
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:textColor="@android:color/white"
-            android:textSize="18sp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="50dp"
-            />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_alignParentRight="true"
-            >
-
-
-        <CheckBox
-            android:id="@+id/Shoucahng"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/shouchang_selector"
-            android:layout_marginLeft="130dp"
-            android:button="@null"
-            />
-        <ImageView
-            android:id="@+id/fenxaing"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/play_fullsrcee_share"
-            android:layout_marginLeft="10dp"
-            />
-        </LinearLayout>
-
-    </RelativeLayout>
-
     <ProgressBar
         android:id="@+id/loading"
         android:layout_width="@dimen/jc_start_button_w_h_normal"
@@ -209,6 +153,65 @@
             android:scaleType="centerCrop"
             android:src="@drawable/jc_enlarge" />
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/layout_top"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@drawable/jc_title_bg"
+        android:gravity="center_vertical"
+        android:layout_alignParentTop="true"
+        android:layout_alignLeft="@+id/back_tiny"
+        android:layout_alignStart="@+id/back_tiny">
+
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:scaleType="centerInside"
+            android:layout_marginLeft="14dp"
+            android:src="@drawable/jc_click_back_selector" />
+
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="10dp"
+            android:textColor="@android:color/white"
+            android:textSize="18sp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="50dp"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_alignParentRight="true"
+            >
+
+
+        <CheckBox
+            android:id="@+id/Shoucahng"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@drawable/shouchang_selector"
+            android:layout_marginLeft="130dp"
+            android:button="@null"
+            />
+        <ImageView
+            android:id="@+id/fenxaing"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/play_fullsrcee_share"
+            android:layout_marginLeft="10dp"
+            />
+        </LinearLayout>
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
