--- a/app/src/main/res/layout/gg_data_item.xml
+++ b/app/src/main/res/layout/gg_data_item.xml
@@ -1,24 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
-              android:layout_height="115dp"
-              android:background="#fbf9f9"
+              android:layout_height="120dp"
+              android:background="#dfd9d9"
               android:orientation="vertical"
     >
 
     <LinearLayout
         android:layout_marginTop="10dp"
-        android:layout_width="360dp"
-        android:layout_height="90dp"
+        android:layout_width="330dp"
+        android:layout_height="110dp"
         android:layout_gravity="center"
         android:background="#fefdfd"
         android:orientation="horizontal">
 
         <RelativeLayout
+            android:layout_marginLeft="10dp"
             android:layout_width="160dp"
-            android:layout_height="wrap_content">
+            android:layout_height="100dp"
+            android:background="#fefdfd"
+            >
 
             <ImageView
+                android:layout_marginTop="10dp"
                 android:id="@+id/gg_image"
                 android:layout_width="140dp"
                 android:layout_height="90dp"
@@ -28,7 +32,7 @@
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="20dp"
-                android:layout_marginTop="70dp"
+                android:layout_marginTop="80dp"
                 android:background="@drawable/lpanda_bottom_gra"/>
 
             <ImageView
@@ -36,7 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="65dp"
+                android:layout_marginTop="90dp"
                 android:src="@drawable/lpanda_live_layer"
                 />
 
@@ -44,7 +48,7 @@
                 android:id="@+id/gg_len"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="85dp"
                 android:layout_toRightOf="@id/hongdian"
                 android:text="Live"
                 android:textColor="#f9f5f5"/>
@@ -68,8 +72,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:maxLines="1"
-                    android:text="465465432132136"
                     android:textColor="#000"
+                    android:layout_marginTop="15dp"
+                    android:text="465465432132136"
                     android:textSize="15sp"
                     />
 
@@ -79,15 +84,11 @@
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
                     android:lines="2"
+                    android:textSize="10sp"
+                    android:layout_marginTop="15dp"
                     android:text="123132132132"
                     />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_marginTop="10dp"
-        android:background="#9f9b9b"></LinearLayout>
 </LinearLayout>
