--- a/app/src/main/res/layout/gg_fragment.xml
+++ b/app/src/main/res/layout/gg_fragment.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dad9d9">
+    android:background="#9f9b9b">
 
 <com.androidkun.PullToRefreshRecyclerView
     android:layout_width="360dp"
