--- a/app/src/main/res/layout/person_agree.xml
+++ b/app/src/main/res/layout/person_agree.xml
@@ -5,7 +5,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
-        android:layout_height="match_parent">
+        android:layout_height="60dp">
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="44dp">
