--- a/app/src/main/res/layout/person_login.xml
+++ b/app/src/main/res/layout/person_login.xml
@@ -7,8 +7,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#303F9F">
+        android:layout_height="60dp"
+        android:background="@color/colorPrimary">
 
         <ImageView
             android:id="@+id/loginBacks"
