--- a/app/src/main/res/layout/personal_center.xml
+++ b/app/src/main/res/layout/personal_center.xml
@@ -5,29 +5,27 @@
               android:background="#dddcdc"
               android:orientation="vertical">
 
-    <RelativeLayout
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/colorPrimary">
-
         <ImageView
-            android:id="@+id/backImg"
+            android:id="@+id/original_Back_ImageOne"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/personal_back_img"/>
+            android:src="@drawable/ic_chevron_left_white_36dp"/>
+
         <TextView
-            android:id="@+id/titleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="#ffffff"
-            android:textSize="16sp"
             android:text="个人中心"
-            android:textStyle="bold"
-            />
-    </RelativeLayout>
+            android:textSize="25sp"
+            android:textColor="#fff"
+            android:layout_gravity="center"
+            android:layout_marginLeft="75dp"/>
+    </LinearLayout>
+
     <LinearLayout
         android:layout_marginTop="10dp"
         android:background="#f9f8f8"
@@ -37,6 +35,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/touxiang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/personal_login_head"
@@ -53,6 +52,7 @@
 
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="360dp"
         android:layout_height="3dp"
