--- a/app/src/main/res/layout/ggwebview_item.xml
+++ b/app/src/main/res/layout/ggwebview_item.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="5dp">
 
     <ImageView
         android:id="@+id/item_Image"
         android:layout_width="150dp"
-        android:layout_height="80dp" />
+        android:layout_height="80dp"
+        />
     <TextView
         android:id="@+id/item_Text"
         android:layout_width="wrap_content"
