--- a/app/src/main/res/layout/person_setting.xml
+++ b/app/src/main/res/layout/person_setting.xml
@@ -11,7 +11,7 @@
         android:background="@color/colorPrimary">
 
         <ImageView
-            android:id="@+id/settingBack"
+            android:id="@+id/settingback"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
